Prevent wrapping instead of preserving whitespace in dropdowns

--- a/styles/pup/components/_dropdown.scss
+++ b/styles/pup/components/_dropdown.scss
@@ -19,7 +19,7 @@ $dropdown-triangle-size: 1rem;
   right: 0;
   text-align: right;
   top: 50%;
-  white-space: pre;
+  white-space: nowrap;
   width: 16rem;
   z-index: layer(dropdowns);
 
